[HHQ-731] Updated trigger to use the new Hibernate persistence backed EventTracker.